# ChessExercisesOrganizerRustFltk

./: .gitignore  Cargo.toml  ExtendedDescription.txt  README.md  README_DEB.txt
.rpm/: chess-exercises-organizer.spec
src/: main.rs
