[package]
name = "chess-exercises-organizer-rust-fltk"
version = "0.1.0"
authors = ["Laurent Bernabe <laurent.bernabe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = {version="0.15.9", features=["use-ninja", "fltk-bundled"]}